2004-10-24  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.h, _deque.c: Modification of the deque implementation
	to use the internal move framework.
	
	* test/unit/mvctor_test.cpp: New test case for the use of the move
	framework within the deque container.
	
2004-10-21  Francois Dumont  <dums@stlport...>

	* stlport/stl/_iostring_stream.h: Simplification of the __stl_alloc_rebind
	 overload to make it less ambiguous for the compilers using it.
	
2004-10-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h, _vector.c: Add of checks to know if a reference
	is in *this before making a systematical copy of it.

2004-10-18  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/type_manips.h: replace template <> by macro.

	* stlport/stl/debug/_debug.h, _debug.c: __check_if_not_owner should return true
	in case of incompatible types and do check different from __check_if_owner;
	added message for check __check_if_not_owner.

	* test/unit/mvctor_test.cpp, test/unit/ptrspec_test.cpp: fix tests to satisfy
	changes related to 23.1.1 Table 67 in stlport/stl/debug/_vector.h, _deque.h---see
	record 2004-10-14 below.

2004-10-14  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_iterator.h: Move of some _DBG_iter_base and _DBG_iter
	methods implementation outside struct definition to fix call on incomplete 
	type compile error generated by the call to the _Incrementable or _Dereferenceable
	functions passing *this as input parameter thanks Alexey Sarytchev
	
	* test/unit/sstream_test.cpp, fstream_test.cpp: Fix of the tests on streambuf 
	throwing exception for platform with no exception support.

	* stl/_string.h: Add of the missing compare methods on the basic_string 
	implementation used by compilers supporting template methods thanks Patrick
	Bennett report.

	* stlport/stl/debug/_vector.h, _deque.h: Add check on the insert range method, 
	the inserted can not be pointing to the this instance where the insertion occur.

