@@ -1,2 +1,5 @@
+
+LDFLAGS_REL = /LTCG
+
 !include vc-common.mak
 
