@@ -1,5 +1,4 @@
 
-OPT_REL = $(OPT_REL) /GL
 LDFLAGS_REL = /LTCG
 
 !include vc-common.mak
